infra/octopusdeploy/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: octopus-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`octopus.durp.info`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: octopusdeploy-octopus-deploy
          port: 80
  tls:
    secretName: octopus-tls
